# kytentudong-his-sakura-cch

./: .gitignore  build.spec  config.json  config.py  main.py  pyproject.toml  runner.py
gui_support/: gui.py  patientlist.py  scrollframe.py
